# adventofcode2024

./: .gitignore  create_todays_folders.ps1  pyproject.toml  readme.md
01/: day.py
02/: day.py
03/: day.py
04/: day.py
05/: day.py
06/: day.py
07/: day.py
08/: day.py
09/: day.py
10/: day.py
11/: day.py
12/: day.py
13/: day.py
14/: day.py
15/: day.py
16/: day.py
17/: day.py
18/: day.py
19/: day.py
20/: day.py
21/: day.py
22/: day.py
23/: day.py
24/: day.py
25/: day.py
template/: day.py
