[tool.poetry]
description = "advent of code"
authors = ["Alexander Jahn <jahn.alexander@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
tqdm = "^4.66.1"
matplotlib = "^3.9.4"
numpy = "^2.2.0"
pillow = "^11.0.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
ruff = "^0.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
